--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,7 +20,7 @@
             <%for(data of data){ %>
                 <div class="list-items ">
                     <div class="product-image">
-                        <img src=<%= data.productBaseInfoV1.imageUrls["200x200"]%> alt="">    
+                        <a href="<%= data.productBaseInfoV1.productUrl %>" target="_blank"><img src=<%= data.productBaseInfoV1.imageUrls["200x200"]%> alt=""></a>    
                     </div>
 
                    <div class="product-info">
