--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="search">
-            <img src="/images/ShopNani.png" alt="">
+            <img src="/images/Flipkart.png" alt="">
             <form action="/search/results" method="GET">
                 <input type="text" name="query" placeholder="Search any product,brand and more" id="bar" >
                 <button type="submit"><i class="fas fa-search"></i></button>
